[package]
name = "twilio-rust"
description = "Simplifies interacting with Twilio's APIs"
version = "0.1.0"
edition = "2024"
keywords = ["twilio", "sdk"]
categories = ["command-line-utilities"]
repository = "https://github.com/settermjd/twilio-rust-sdk"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde-inline-default = "0.2.3"
serde_json = "1.0.141"
